<resources>
    <string name="app_name">Selfstudy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android@selfstudy.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">HOME</string>
    <string name="tests">TESTS</string>
    <string name="analysis">ANALYSIS</string>
    <string name="doubts">DOUBTS</string>
    <string name="profile">PROFILE</string>
    <string name="trial_msg">Your free trial expired on 29 Jan 2019 please upgrade now to get full access.</string>
    <string name="subjects">Subjects</string>
</resources>
